--- a/UxParticles.Demo.Libs/UxParticles.Demo.Libs.csproj
+++ b/UxParticles.Demo.Libs/UxParticles.Demo.Libs.csproj
@@ -48,7 +48,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Debug\DispatcherDebugExtensions.cs" />
+    <Compile Include="Diagnostics\DispatcherDebugExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
